# data-toolbox-cli

./: .dockerignore  .editorconfig  .gitignore  404.html  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Dockerfile  LICENSE  Makefile  README.md  SECURITY.md  analyzer.py  cli.py  index.html  mkdocs.yml  pyproject.toml  reporter.py  requirements.txt  tox.ini
.github/workflows/: docs.yml  publish.yml  test.yml
PROJECT_GUIDE/: index.html
api/: index.html
docs/: PROJECT_GUIDE.md  api.md  index.md  usage.md
scripts/: coverage.sh  quality-gate.sh  setup-dev.sh
search/: search_index.json
src/data_toolbox/: __about__.py  __init__.py  analyzer.py  cli.py  reporter.py
tests/: conftest.py  test_analyzer.py  test_cli.py  test_reporter.py
tests/fixtures/: sample_data.csv
usage/: index.html
