[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "data-toolbox-cli"
version = "0.1.0"
description = "数据分析工具箱CLI — CSV/JSON 数据清洗、统计分析与 Markdown 报告生成"
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.8"
classifiers = [
    "Development Status :: 3 - Alpha",
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Topic :: Scientific/Engineering :: Information Analysis",
]

[project.scripts]
data-toolbox = "data_toolbox.cli:main"

[tool.hatch.build.targets.wheel]
packages = ["src/data_toolbox"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]

[tool.ruff]
target-version = "py38"
line-length = 100

[tool.ruff.lint]
select = [
    "E",   # pycodestyle errors
    "W",   # pycodestyle warnings
    "F",   # pyflakes
    "I",   # isort
    "B",   # flake8-bugbear
    "UP",  # pyupgrade
]
ignore = ["E501"]  # line too long handled by formatter

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
