[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "data-toolbox-cli"
dynamic = ["version"]
description = "数据分析工具箱CLI — CSV/JSON 数据清洗、统计分析与 Markdown 报告生成"
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.8"
authors = [
    {name = "panzhaohu666"},
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Topic :: Scientific/Engineering :: Information Analysis",
    "Environment :: Console",
    "Intended Audience :: Developers",
    "Intended Audience :: Science/Research",
]

[project.optional-dependencies]
dev = ["pytest>=7", "ruff>=0.5", "mypy>=1", "tox>=4"]
docs = ["mkdocs>=1.6", "mkdocs-material>=9"]
test = ["pytest>=7", "pytest-cov>=5", "tox>=4"]

[project.scripts]
data-toolbox = "data_toolbox.cli:main"

[tool.hatch.build.targets.wheel]
packages = ["src/data_toolbox"]

[tool.hatch.version]
path = "src/data_toolbox/__about__.py"

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]

# ==================== mypy ====================
[tool.mypy]
python_version = "3.8"
strict = true
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
disallow_incomplete_defs = true
check_untyped_defs = true
no_implicit_optional = true
warn_redundant_casts = true
warn_unused_ignores = true
warn_no_return = true
show_error_codes = true

# ==================== ruff ====================
[tool.ruff]
target-version = "py38"
line-length = 100

[tool.ruff.lint]
select = [
    "E",   # pycodestyle errors
    "W",   # pycodestyle warnings
    "F",   # pyflakes
    "I",   # isort
    "B",   # flake8-bugbear
    "UP",  # pyupgrade
    "N",   # pep8-naming
    "SIM", # flake8-simplify
    "C4",  # flake8-comprehensions
]
ignore = ["E501"]  # line too long handled by formatter

[tool.ruff.format]
quote-style = "double"
indent-style = "space"

# ==================== coverage ====================
[tool.coverage.run]
source = ["src/data_toolbox"]
omit = ["tests/*", "src/data_toolbox/__about__.py"]

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "if __name__ == .__main__.:",
    "raise NotImplementedError",
]
